2003-09-21  Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/z80/gen.c (setupToPreserveCarry): Fixed bug #796955
	* src/z80/gen.c (setupPair, genMovePairPair): Fixed setupPair
	to correctly handle general case of AOP_PAIRPTR
	* src/z80/gen.c (aopGet, aopPut): Generalized AOP_PAIRPTR handling

2003-09-21  Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/mcs51/ralloc.c (fillGaps),
	* src/ds390/ralloc.c (fillGaps): fixed bug #810093 (yet another
	register positioning bug)

2003-09-21  Bernhard Held <bernhard@bernhardheld.de>

	* device/lib/_fsdiv.c: replaced (1<<31) by (1ul<<31)

2003-09-19  Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/mcs51/gen.c (loadDptrFromOperand, genFarPointerGet,
	genCodePointerGet, genGenPointerGet, genFarPointerSet,
	genGenPointerSet): handle AOP_DPTR correctly when loading dptr
	(ralloc doesn't intentionally do this now, but perhaps later)
	* src/mcs51/ralloc.c (serialRegAssign, fillGaps),
	* src/ds390/ralloc.c (serialRegAssign, fillGaps): fixed some
	register positioning bugs (Fixed bug #762602 and #795325)
	* src/SDCCicode.c (geniCodeDerefPtr): Track output class correctly
	(Fixed bug #808779)
	* src/z80/gen.c: increased _vemit2's buffer[] to handle long
	lines that --i-code-in-asm generates

2003-09-18  Jesus Calvino-Fraga <jesusc@ece.ubc.ca>

	*link/z80/lklibr.c, as/mcs51/lklibr.c: Fixed Linux segfaults when
	trying to fclose a FILE* that was already closed.

2003-09-18  Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/SDCCsymt.c (structElemType): fixed bug #808291 (members
	of const struct should be treated as if const themselves)

2003-09-18  Bernhard Held <bernhard@bernhardheld.de>

	* src/SDCCval.c (valPlus, valMinus): fixed bug #808337

2003-07-06  Jesus Calvino-Fraga <jesusc@ece.ubc.ca>

	* support/librarian/sdcclib.c: Generate correct offsets for libraries with
	Unix (/n) and DOS (/r/n) line terminations.

2003-09-17  Erik Petrich <epetrich@ivorytower.norman.ok.us>
